--- a/devops-frontend/src/app/admin/pages/create-user/create-user.component.html
+++ b/devops-frontend/src/app/admin/pages/create-user/create-user.component.html
@@ -1,6 +1,6 @@
 <p>edit-user works!</p>
 <div class="container max-w-sm min-w-min">
   <app-user-form
-    [userData]="initialuser">
+    [userData]="initialUser">
   </app-user-form>
 </div>
