--- a/devops-frontend/src/app/admin/pages/create-vehicle/create-vehicle.component.html
+++ b/devops-frontend/src/app/admin/pages/create-vehicle/create-vehicle.component.html
@@ -1,6 +1,6 @@
 <p>edit-vehicle works!</p>
 <div class="container max-w-sm min-w-min">
   <app-vehicle-form
-    [vehicleData]="initialvehicle">
+    [vehicleData]="initialVehicle">
   </app-vehicle-form>
 </div>
