--- a/devops-frontend/src/app/admin/pages/drivers-page/driver-page.component.html
+++ b/devops-frontend/src/app/admin/pages/drivers-page/driver-page.component.html
@@ -25,8 +25,8 @@
           <td class="border-spacing-1">{{ driver.responsibility }}</td>
           <td class="border-spacing-1">{{ driver.qualification }}</td>
           <td class="border-spacing-1">{{ driver.salary }}</td>
-          <td class="border-spacing-1">{{ driver.createAt }}</td>
-          <td class="border-spacing-1">{{ driver.updateAt }}</td>
+          <td class="border-spacing-1">{{ driver.createdAt }}</td>
+          <td class="border-spacing-1">{{ driver.updatedAt }}</td>
           <td class="border-spacing-1">{{ driver.trips }}</td>
           <td>
             <button type="button" class="btn bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
