--- a/devops-frontend/src/app/admin/pages/edit-vehicle/edit-vehicle.component.html
+++ b/devops-frontend/src/app/admin/pages/edit-vehicle/edit-vehicle.component.html
@@ -1,6 +1,6 @@
 <p>edit-vehicle works!</p>
 <div class="container max-w-sm min-w-min">
-  <app-vehicle-detail>
-    [userData]="vehicleEditable">
+  <app-vehicle-detail
+    [vehicleData]="vehicleEditable">
   </app-vehicle-detail>
 </div>
