--- a/devops-frontend/src/app/admin/components/trip-detail/trip-detail.component.html
+++ b/devops-frontend/src/app/admin/components/trip-detail/trip-detail.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="DataForm" class="w-full max-w-lg" action="">
+<form [formGroup]="tripDataForm" class="w-full max-w-lg" action="">
   <div class="flex flex-wrap -mx-3 mb-6">
     <div class="w-full md:w-1/4 px-3 mb-6 md:mb-0">
       <label for="routeName" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">routeName</label>
