--- a/devops-frontend/src/app/admin/components/vehicle-detail/vehicle-detail.component.html
+++ b/devops-frontend/src/app/admin/components/vehicle-detail/vehicle-detail.component.html
@@ -4,7 +4,7 @@
       <label for="brand" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Brand</label>
       <input type="text" id="brand"
         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light"
-        formControlName="name" required [(ngModel)]="vehicleData.name">
+        formControlName="name" required [(ngModel)]="vehicleData.brand">
     </div>
     <div class="w-full md:w-1/2 px-3">
       <label for="model" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Model</label>
@@ -43,7 +43,7 @@
       <label for="photoURL" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Photo URL</label>
       <input type="text" id="photoURL"
         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light"
-        formControlName="photoURL" required [(ngModel)]="vehicleData.photoURL">
+        formControlName="photoURL" required [(ngModel)]="vehicleData.photoUrl">
     </div>
 
     <div class="w-full md:w-1/1 px-3">
