--- a/devops-frontend/src/app/admin/pages/create-driver/create-driver.component.html
+++ b/devops-frontend/src/app/admin/pages/create-driver/create-driver.component.html
@@ -1,6 +1,6 @@
 <p>create-driver works!</p>
 <div class="container max-w-sm min-w-min">
   <app-driver-form
-    [driverData]="initialdriver">
+    [driverData]="initialDriver">
   </app-driver-form>
 </div>
