--- a/devops-frontend/src/app/admin/pages/create-trip/create-trip.component.html
+++ b/devops-frontend/src/app/admin/pages/create-trip/create-trip.component.html
@@ -1,6 +1,6 @@
 <p>edit-trip works!</p>
 <div class="container max-w-sm min-w-min">
   <app-trip-form
-    [tripData]="initialtrip">
+    [tripData]="initialTrip">
   </app-trip-form>
 </div>
